# CodeScope-AI

./: .Dockerfile  .dockerignore  .gitignore  CHANGELOG.md  DECISIONS.md  MANIFEST.in  MakeFile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
codescope_ai/: main.py
codescope_ai/app/core/: app_config.py  exceptions.py  retry.py  setup_logger.py
codescope_ai/app/documentation/: file_documenter.py  project_documenter.py
codescope_ai/app/ingestion/: archive_loader.py  code_chunker.py  file_discovery.py  source_file_reader.py
codescope_ai/app/rag/: answer_service.py  embedding_client.py  llm_client.py  prompt_builder.py  retriever.py  vector_store.py
codescope_ai/app/ui/: streamlit_app.py
etc/: codescope_ai_config.yml
tests/: conftest.py  test_answer_service.py  test_app_config.py  test_archive_loader.py  test_code_chunker.py  test_file_discovery.py  test_prompt_builder.py  test_retry.py  test_source_file_reader.py  test_vector_store.py
